--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,15 @@ body {
 }
 
 
+.account .items_account {
+    background: #fff;
+    width: 400px;
+    height: 500px;
+    border-radius: 8px;
+    top: 25px;
+    position: relative;
+}
+
 .account .items_account .text {
     font-family: 'Epilogue', sans-serif;
     font-size: 24px;
@@ -1672,9 +1681,6 @@ input:checked + .slider:before {
     width: 90%;
     height: 85%;
     margin: auto;
-    background: #fff;
-    border-radius: 8px;
-    position: relative;
     top: 0;
 }
 
@@ -1755,84 +1761,89 @@ input:checked + .slider:before {
 
 /*}*/
 
-@media (max-width: 320px) {
+@media  (min-width: 320px) {
     .contenue_registration{
         flex-direction: column;
+        align-items: center;
+        width: 100vh;
     }
 
     .contenue_registration .account {
         width: 100%;
-        height: 600px;
+        height: 70%;
     }
 
-    .account .items_account{
+    .container_registration {
+        height: 110vh;
+    }
+
+    .account .items_account {
         width: 100%;
-        border-radius: 0;
         height: 100%;
     }
 
-    .container_registration{
-        height: 100%;
-    }
-
-    .container_registration .image {
-        top: 20px;
-        left: 25px;
-        width: 140px;
-        height: 50px;
-    }
-
-    .account .items_account .titre_account{
-        max-width: 100%;
+    .contenue_registration .picture_groupe{
         height: 30%;
+        width: 100%;
     }
 
     .account .items_account .text {
-        font-size: 25px;
+        font-size: 60px;
     }
 
     .account .items_account .text_description {
-        font-size: 15px;
+        font-size: 35px;
     }
 
     .account .items_account .titre_account .icons .items_icons {
-        width: 55px;
+        width: 100px;
+        height: 95px;
+        border-radius: 50px;
     }
 
     .account .items_account .titre_account .icons .items_icons img {
-        height: 35px;
+        height: 50px;
     }
 
-    .account .items_account .formulair_account {
-        max-width: 85%;
+    .account .items_account .titre_account .icons {
+        margin-top: 35px;
+        gap: 20px;
     }
 
     .account .items_account .formulair_account label {
-        font-size: 20px;
+        font-size: 45px;
     }
 
     .account .items_account .formulair_account input {
-        height: 50px;
-        font-size: 18px;
-        padding-left: 18px;
-        padding-right: 18px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        height: 100px;
+        font-size: 40px;
     }
 
     .account .items_account .formulair_account .button_sign {
-        font-size: 20px;
-        height: 45px;
+        font-size: 45px;
+        border-radius: 60px;
+        height: 100px;
+        margin-top: 50px;
     }
 
     .account .items_account .formulair_account .button_description {
-        font-size: 16px;
+        font-size: 35px;
+        margin-top: 30px;
+    }
+
+    #eyeicon {
+        bottom: 28px;
+        right: 70px;
+        height: 70px;
     }
 
     .container_registration .groupe {
-        width: 100%;
-        height: 335px;
+        width: 60%;
+        height: 760px;
+        right: -370px;
     }
 }
+
+
 
 
