--- a/styles.css
+++ b/styles.css
@@ -1761,87 +1761,97 @@ input:checked + .slider:before {
 
 /*}*/
 
-@media  (min-width: 320px) {
-    .contenue_registration{
-        flex-direction: column;
-        align-items: center;
-        width: 100vh;
+@media (max-width: 1771px) {
+    .account .items_account .titre_account {
+        max-width: 65%;
     }
 
-    .contenue_registration .account {
-        width: 100%;
-        height: 70%;
+    .account .items_account {
+        width: 95%;
+    }
+}
+
+@media (max-width: 1778px) {
+    .account .items_account .titre_account {
+        max-width: 66%;
     }
 
-    .container_registration {
-        height: 110vh;
+    .account .items_account {
+        width: 95%;
+    }
+}
+
+@media (max-width: 1565px) {
+    .account .items_account .titre_account {
+        max-width: 67%;
+    }
+
+    .account .items_account {
+        width: 95%;
+    }
+}
+
+@media (max-width: 1556px) {
+    .account .items_account .titre_account {
+        max-width: 68%;
     }
 
     .account .items_account {
         width: 100%;
-        height: 100%;
+    }
+}
+
+@media (max-width: 1440px) {
+    .account .items_account .titre_account {
+        max-width: 68%;
     }
 
-    .contenue_registration .picture_groupe{
-        height: 30%;
+    .account .items_account {
         width: 100%;
     }
 
-    .account .items_account .text {
-        font-size: 60px;
+    .contenue_registration .account {
+        width: 40%;
     }
 
-    .account .items_account .text_description {
-        font-size: 35px;
-    }
-
-    .account .items_account .titre_account .icons .items_icons {
-        width: 100px;
-        height: 95px;
-        border-radius: 50px;
-    }
-
-    .account .items_account .titre_account .icons .items_icons img {
-        height: 50px;
-    }
-
-    .account .items_account .titre_account .icons {
-        margin-top: 35px;
-        gap: 20px;
-    }
-
-    .account .items_account .formulair_account label {
-        font-size: 45px;
-    }
-
-    .account .items_account .formulair_account input {
-        height: 100px;
-        font-size: 40px;
-    }
-
-    .account .items_account .formulair_account .button_sign {
-        font-size: 45px;
-        border-radius: 60px;
-        height: 100px;
-        margin-top: 50px;
-    }
-
-    .account .items_account .formulair_account .button_description {
-        font-size: 35px;
-        margin-top: 30px;
-    }
-
-    #eyeicon {
-        bottom: 28px;
-        right: 70px;
-        height: 70px;
+    .contenue_registration {
+        justify-content: center
     }
 
     .container_registration .groupe {
-        width: 60%;
-        height: 760px;
-        right: -370px;
+        width: 95%;
     }
+}
+
+@media (max-width: 1250px) {
+    /*.container_registration .groupe {*/
+    /*    width: 90%;*/
+    /*    height: 84%;*/
+    /*    bottom: -95px;*/
+    /*}*/
+
+    .account .items_account .titre_account {
+        max-width: 78%;
+    }
+
+    .contenue_registration .account {
+        width: 36%;
+    }
+
+    .contenue_registration .picture_groupe {
+        width: 40%;
+    }
+
+    .container_registration .groupe {
+        width: 100%;
+        height: 78%;
+        bottom: -150px;
+    }
+
+    .contenue_registration {
+        justify-content: space-around;
+    }
+
 }
 
 
